cdbs (0.4.45) UNRELEASED; urgency=low

  * Added support for user-defined CC and CXX in qmake class

 -- Peter Eisentraut <petere@debian.org>  Thu, 13 Jul 2006 17:28:39 +0200

cdbs (0.4.44) unstable; urgency=medium

  * Shortened uploaders list
  * Added gs-common build dependency (closes: #375464)
  * Disabled ant-1 test while kaffe is broken (see #376336)
  * Removed weird garbage file left in last upload

 -- Peter Eisentraut <petere@debian.org>  Mon,  3 Jul 2006 17:46:43 +0200

cdbs (0.4.43) unstable; urgency=low

  * Python class update (Closes: #374809):
    + support latest pysupport features (mainly .so support).
    + use pyversions improvements to simplify the code.
    + added a check against 'debian/pycompat'.
    + tighten build-dependencies to make use of new features.
    + $(cdbs_python_current_version) is always set
      (Closes: #374012).
    + honour minor supported version (thanks to Piotr Ozarowski for the
      original patch) (Closes: #373997).

 -- Marc Dequènes (Duck) <Duck@DuckCorp.org>  Sat, 24 Jun 2006 11:44:28 +0200

cdbs (0.4.42) unstable; urgency=low

  * Corrected misspelled DEB_PYTHON_INSTALL_ARGS(_ALL)
    (python-distutils.mk) (closes: #373678)
  * Corrected automatic cdbs dependency version (python-distutils.mk)
    (closes: #373653, #373997)
  * Corrected error message (python-distutils.mk)
    (closes: #373653, #373873)

 -- Peter Eisentraut <petere@debian.org>  Fri, 16 Jun 2006 20:00:03 +0200

cdbs (0.4.41) unstable; urgency=low

  * Removed _cdbs_bootstrap variable
  * Propagate LDFLAGS (autotools-vars.mk, makefile-vars.mk)
  * Added qmake class (closes: #360589)
  * Honor DEB_PYTHON_COMPILE_VERSION when calling dh_python
    (python-distutils.mk) (closes: #369335)
  * Replaced most uses of := by = in makefiles.  This generally gives
    more reasonable behavior.
  * Added buildcore picture, and integrated it and depgraph into the
    documentation
  * Support for new Python policy (provided by Marc Dequènes)