@@ -27,18 +27,17 @@ include $(_cdbs_rules_path)/buildcore.mk$(_cdbs_makefile_suffix)
 DEB_PHONY_RULES += list-missing
 
 list-missing:
-	rm -f debian/cdbs-{install,package}-list
-	if test -d debian/tmp; then \
+	@if test -d debian/tmp; then \
 	  (cd debian/tmp && find . -type f -o -type l | grep -v '/DEBIAN/' | sort) > debian/cdbs-install-list; \
 	  (for package in $(DEB_ALL_PACKAGES); do \
 	     (cd debian/$$package && find . -type f -o -type l); \
 	   done) | sort -u > debian/cdbs-package-list; \
-	  diff -u debian/cdbs-install-list debian/cdbs-package-list | egrep '^-' || true; \
+	  diff -u debian/cdbs-install-list debian/cdbs-package-list | sed '1,2d' | egrep '^-' || true; \
 	else \
 	  echo "All files were installed into debian/$(DEB_SOURCE_PACKAGE)."; \
 	fi
 
 clean::
-	rm -f debian/cdbs-{install,package}-list
+	rm -f debian/cdbs-install-list debian/cdbs-package-list
 
 endif
